Progress with export/import to YAML